# AstraX

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  ReadMe.md
.github/workflows/: ci.yml  release.yml
config/: default.json
docs/: DEPLOYMENT.md
include/: editor.h
include/astrax/: buffer.h  command.h  config.h  editor.h  renderer.h  search.h  terminal.h  types.h  version.h
include/astrax/syntax/: cpp_highlighter.h  highlighter.h
scripts/: build-release.bat  install.bat  install.sh
src/: buffer.cpp  command.cpp  config.cpp  editor.cpp  main.cpp  renderer.cpp  search.cpp  terminal_unix.cpp  terminal_windows.cpp
src/syntax/: cpp_highlighter.cpp  highlighter.cpp
tests/: CMakeLists.txt  buffer_test.cpp  command_test.cpp
